--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+body {background-color: rgb(250, 195, 100);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -11,13 +11,28 @@ header {
     background-color: #34495e;
     padding: 10px 0;
 }
+.welcome{
+    animation-name: changecolor;
+    animation-duration: 5s;
+}
+@keyframes changecolor{
+    20%{ color: blue;
 
+    }
+    25{color: green;}
+    30%{color: yellow}
+    25{
+color: red;
+    }
+}
 nav ul {
     list-style-type: none;
     display: flex;
     justify-content: center;
 }
-
+.colorborder{
+    background-color: beige;
+}
 nav ul li {
     margin: 0 15px;
 }
