--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
 }
 .welcome{
     animation-name: changecolor;
-    animation-duration: 5s;
+    animation-duration: 5s ;
 }
 @keyframes changecolor{
     20%{ color: blue;
@@ -24,6 +24,22 @@ header {
     25{
 color: red;
     }
+}
+.mario{margin-top: 500px;
+    border-top: 10px  red solid ;
+    background-color: cadetblue;
+    border-bottom: 10px red solid;
+    position: absolute;
+    animation-name: drive;
+    animation-duration: 7s;
+    animation-fill-mode: both;
+    animation-iteration-count: 5;
+}
+@keyframes drive{
+    from{ 
+        transform: translateX(-900px);
+    }
+    to{transform: translateX(1500px);}
 }
 nav ul {
     list-style-type: none;
