--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,9 @@ color: red;
 }
 @keyframes drive{
     from{ 
-        transform: translateX(-900px);
+        transform: translateX(-800px);
     }
-    to{transform: translateX(1500px);}
+    to{transform: translateX(2000px);}
 }
 nav ul {
     list-style-type: none;
@@ -82,4 +82,13 @@ table, th, td {
 th, td {
     padding: 10px;
     text-align: left;
+}
+.lastP{
+    border: plum solid 10px;
+    width: 500px;
+    text-align:center ;
+    margin-bottom: 350px;
+    margin-left: 500px;
+    color: rgb(11, 21, 1);
+    text-align: justify;
 }
